# demos

./: .gitignore  README.md
projects/brightdata-mcp/: README.md  client.py  ngrok_url.txt  pyproject.toml  server.py
projects/effect-drizzle-service/: .gitignore  README.md  drizzle.config.ts  package.json
projects/effect-drizzle-service/src/: test.ts
projects/effect-drizzle-service/src/database-service/: dtos.ts  index.ts  schema.ts
projects/fastapi-to-mcp/: .gitignore  README.md  client.py  pyproject.toml  scratch.py  server.py
projects/fastmcp-proxy/: README.md  client.py  pyproject.toml  server.py
projects/free-threaded-python/: README.md  cpu_processes.py  cpu_threads.py  pyproject.toml
projects/gemini-urls-context/: README.md  main.py  pyproject.toml
